--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,11 @@ $nav-font-color: #ffffff;
 $link-hover-color: #2581Dc;
 $page-background: #FDFDFD;
 
+$primary: #2196f3;
+
+$gradient-1: #16222A;
+$gradient-2: #3A6073;
+
 body {
     margin: 0;
     background-color: #DFDBE5;
@@ -126,6 +131,7 @@ nav {
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 9999 !important;
 }
 
 .nav-container {
@@ -146,6 +152,10 @@ nav {
         color: $nav-font-color;
         text-decoration: none;
     }
+
+    a:hover {
+        color: $link-hover-color;
+    }
 }
 
 .content {
@@ -164,7 +174,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: $page-background;
+    background-image: radial-gradient(circle, $gradient-1, $gradient-2);
 
     a {
         position: absolute;
@@ -176,7 +186,7 @@ nav {
         color: inherit;
 
         h1 {
-            
+            color: $page-background;
         }
     }
 }
@@ -189,7 +199,7 @@ nav {
 }
 
 .arrow-hover {
-    color: red;
+    color: #2581Dc;
 }
 
 /// Mixin to place items on a circle
@@ -230,17 +240,17 @@ nav {
 
 .circle-container {
     @include on-circle($item-count: 5, $circle-size: 40em, $item-size: 12em);
-
+    // max-width: 50%;
     margin: 5em auto 0;
 
     // border: solid 5px tomato;
 
-    img {
+    .svg {
         display: block;
-        width: 100%;
-        height: 100%;
-
-        // border-radius: 5px;
+        width: 125%;
+        height: 125%;
+        // background-color: #ff5722;
+        // border-radius: 50%;
         // filter: grayscale(100%);
         // border: solid 5px tomato;
         // transition: .15s;
@@ -251,6 +261,10 @@ nav {
        
         }
     }
+}
+
+.svg path {
+    fill: $page-background;
 }
 
 @media only screen and (max-width: $breakpoint) {
@@ -308,5 +322,66 @@ nav {
 @media screen and (min-width: $breakpoint) {
     .nav-list {
         display: block !important;
+    }
+}
+
+//resize circle images
+@media only screen and (max-width: 950px) {
+    .circle-container {
+        @include on-circle($item-count: 8, $circle-size: 25em, $item-size: 8em);
+        // max-width: 50%;
+        margin: 5em auto 0;
+
+        .svg {
+            max-width: 125%;
+            max-height: 125%;
+        }
+    }
+
+    .landing-area-container {
+        a {
+            top: 35%;
+        }
+    }
+}
+
+@media only screen and (max-width: 610px) {
+    .circle-container {
+        @include on-circle($item-count: 8, $circle-size: 18em, $item-size: 6em);
+        // max-width: 50%;
+        margin: 5em auto 0;
+
+        .svg {
+            max-width: 125%;
+            max-height: 125%;
+        }
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .circle-container {
+        @include on-circle($item-count: 8, $circle-size: 16em, $item-size: 6em);
+        // max-width: 50%;
+        margin: 5em auto 0;
+
+        .svg {
+            max-width: 100%;
+            max-height: 100%;
+        }
+
+    }
+}
+
+@media only screen and (max-width: 370px) {
+    .circle-container {
+        @include on-circle($item-count: 8, $circle-size: 14em, $item-size: 4em);
+        // max-width: 50%;
+        margin: 5em auto 0;
+
+        .svg {
+            max-width: 110%;
+            max-height: 110%;
+        }
+
     }
 }
