--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,12 @@ nav {
   background-color: #FDFDFD;
   border-radius: 10px; }
 
+.text-center {
+  text-align: center; }
+
+.underline {
+  text-decoration: underline; }
+
 .landing-area-container {
   width: 100%;
   height: 100vh;
@@ -354,5 +360,18 @@ nav {
     .circle-container .svg {
       max-width: 110%;
       max-height: 110%; } }
+@media only screen and (min-width: 800px) {
+  #about {
+    display: flex;
+    flex-direction: row; }
+    #about > div:first-child {
+      margin: 0px 10px 0px 0px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      border-right: 2px solid #2581Dc;
+      padding: 5px 8px 5px 5px; }
+    #about h3 {
+      text-decoration: none; } }
 
 /*# sourceMappingURL=style.css.map */
