--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -168,6 +168,14 @@ nav {
     border-radius: 10px;
 }
 
+.text-center {
+    text-align: center;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
 .landing-area-container {
     width: 100%;
     height: 100vh;
@@ -240,6 +248,7 @@ nav {
 
 .circle-container {
     @include on-circle($item-count: 5, $circle-size: 40em, $item-size: 12em);
+
     // max-width: 50%;
     margin: 5em auto 0;
 
@@ -249,6 +258,7 @@ nav {
         display: block;
         width: 125%;
         height: 125%;
+
         // background-color: #ff5722;
         // border-radius: 50%;
         // filter: grayscale(100%);
@@ -329,6 +339,7 @@ nav {
 @media only screen and (max-width: 950px) {
     .circle-container {
         @include on-circle($item-count: 8, $circle-size: 25em, $item-size: 8em);
+
         // max-width: 50%;
         margin: 5em auto 0;
 
@@ -348,6 +359,7 @@ nav {
 @media only screen and (max-width: 610px) {
     .circle-container {
         @include on-circle($item-count: 8, $circle-size: 18em, $item-size: 6em);
+
         // max-width: 50%;
         margin: 5em auto 0;
 
@@ -361,6 +373,7 @@ nav {
 @media only screen and (max-width: 450px) {
     .circle-container {
         @include on-circle($item-count: 8, $circle-size: 16em, $item-size: 6em);
+
         // max-width: 50%;
         margin: 5em auto 0;
 
@@ -368,13 +381,13 @@ nav {
             max-width: 100%;
             max-height: 100%;
         }
-
     }
 }
 
 @media only screen and (max-width: 370px) {
     .circle-container {
         @include on-circle($item-count: 8, $circle-size: 14em, $item-size: 4em);
+
         // max-width: 50%;
         margin: 5em auto 0;
 
@@ -382,6 +395,25 @@ nav {
             max-width: 110%;
             max-height: 110%;
         }
+    }
+}
 
+@media only screen and (min-width: $breakpoint) {
+    #about {
+        display: flex;
+        flex-direction: row;
+
+        > div:first-child {
+            margin: 0px 10px 0px 0px;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            border-right: 2px solid $link-hover-color;
+            padding: 5px 8px 5px 5px;
+        }
+
+        h3 {
+            text-decoration: none;
+        }
     }
 }
