--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,9 @@ h1, h3 {
     font-size: 20px;
     color: #FDFDFD; }
 
+#about, #products h3, .product div {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); }
+
 #products {
   width: 90%;
   margin: 0 auto; }
