--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -199,6 +199,10 @@ h1, h3 {
     }
 }
 
+#about, #products h3, .product div {
+    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+}
+
 #products {
     width: 90%;
     margin: 0 auto;
