--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,17 +124,7 @@ nav {
 h1, h3 {
   font-family: "Exo 2", sans-serif; }
 
-.footer {
-  height: 70px;
-  width: 100%;
-  background-color: #262626;
-  display: flex;
-  justify-content: center; }
-  .footer p {
-    font-size: 20px;
-    color: #FDFDFD; }
-
-#about, #products h3, .product div {
+.product div {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); }
 
 #products {
