--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -187,19 +187,7 @@ h1, h3 {
     font-family: $exo;
 }
 
-.footer {
-    height: 70px;
-    width: 100%;
-    background-color: $nav-background;
-    display: flex;
-    justify-content: center;
-    p {
-        font-size: 20px;
-        color: $page-background;
-    }
-}
-
-#about, #products h3, .product div {
+.product div {
     box-shadow: 0 1px 2px rgba(0,0,0,.1);
 }
 
