--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,26 +162,63 @@ h1, h3 {
     border-radius: 10px; }
 
 .landing-area-container {
-  position: relative;
   width: 100%;
   height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-image: radial-gradient(circle, #16222A, #3A6073); }
-  .landing-area-container a {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    text-align: center;
-    z-index: 1;
-    cursor: pointer;
-    text-decoration: none;
-    color: inherit; }
-    .landing-area-container a h1 {
-      color: #FDFDFD; }
+  background-image: radial-gradient(circle, #FDFDFD 60%, #2196f3); }
+  .landing-area-container .row1 {
+    text-align: center; }
+    .landing-area-container .row1 div {
+      height: 200px;
+      width: 24%;
+      display: inline-block;
+      margin-top: 80px; }
+      .landing-area-container .row1 div img {
+        max-width: 100%;
+        max-height: 100%;
+        border-radius: 50%; }
+  .landing-area-container .row2 {
+    text-align: center; }
+    .landing-area-container .row2 div {
+      height: 200px;
+      width: 32%;
+      display: inline-block;
+      vertical-align: top; }
+      .landing-area-container .row2 div .heading-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%; }
+      .landing-area-container .row2 div img {
+        max-width: 100%;
+        max-height: 100%;
+        border-radius: 50%; }
+      .landing-area-container .row2 div a {
+        text-decoration: none; }
+      .landing-area-container .row2 div h1 {
+        cursor: pointer;
+        color: #0D47A1; }
+  .landing-area-container .row3 {
+    text-align: center; }
+    .landing-area-container .row3 div {
+      height: 200px;
+      width: 24%;
+      display: inline-block;
+      vertical-align: top; }
+      .landing-area-container .row3 div img {
+        max-width: 100%;
+        max-height: 100%;
+        border-radius: 50%; }
+  .landing-area-container .row4 {
+    text-align: center; }
+    .landing-area-container .row4 div {
+      height: 200px;
+      width: 32%;
+      display: inline-block;
+      vertical-align: top; }
+      .landing-area-container .row4 div img {
+        max-width: 100%;
+        max-height: 100%;
+        border-radius: 50%; }
 
 #arrow {
   -moz-transition: all .2s ease-in;
@@ -190,7 +227,7 @@ h1, h3 {
   transition: all .2s ease-in; }
 
 .arrow-hover {
-  color: #2581Dc; }
+  color: green; }
 
 .learn-more-btn {
   background-color: #2581Dc;
@@ -206,40 +243,6 @@ h1, h3 {
     cursor: pointer; }
   .learn-more-btn:active {
     transform: translateY(3px); }
-
-.circle-container {
-  position: relative;
-  width: 40em;
-  height: 40em;
-  padding: 0;
-  border-radius: 50%;
-  list-style: none;
-  margin: 5em auto 0; }
-  .circle-container > * {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 12em;
-    height: 12em;
-    margin: -6em; }
-    .circle-container > *:nth-of-type(1) {
-      transform: rotate(0deg) translate(20em) rotate(0deg); }
-    .circle-container > *:nth-of-type(2) {
-      transform: rotate(72deg) translate(20em) rotate(-72deg); }
-    .circle-container > *:nth-of-type(3) {
-      transform: rotate(144deg) translate(20em) rotate(-144deg); }
-    .circle-container > *:nth-of-type(4) {
-      transform: rotate(216deg) translate(20em) rotate(-216deg); }
-    .circle-container > *:nth-of-type(5) {
-      transform: rotate(288deg) translate(20em) rotate(-288deg); }
-  .circle-container .svg {
-    display: block;
-    width: 125%;
-    height: 125%; }
-
-.svg path {
-  fill: #FDFDFD; }
 
 @media only screen and (max-width: 800px) {
   .nav-mobile {
@@ -275,165 +278,5 @@ h1, h3 {
 @media screen and (min-width: 800px) {
   .nav-list {
     display: block !important; } }
-@media only screen and (max-width: 950px) {
-  .circle-container {
-    position: relative;
-    width: 25em;
-    height: 25em;
-    padding: 0;
-    border-radius: 50%;
-    list-style: none;
-    margin: 5em auto 0; }
-    .circle-container > * {
-      display: block;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 8em;
-      height: 8em;
-      margin: -4em; }
-      .circle-container > *:nth-of-type(1) {
-        transform: rotate(0deg) translate(12.5em) rotate(0deg); }
-      .circle-container > *:nth-of-type(2) {
-        transform: rotate(45deg) translate(12.5em) rotate(-45deg); }
-      .circle-container > *:nth-of-type(3) {
-        transform: rotate(90deg) translate(12.5em) rotate(-90deg); }
-      .circle-container > *:nth-of-type(4) {
-        transform: rotate(135deg) translate(12.5em) rotate(-135deg); }
-      .circle-container > *:nth-of-type(5) {
-        transform: rotate(180deg) translate(12.5em) rotate(-180deg); }
-      .circle-container > *:nth-of-type(6) {
-        transform: rotate(225deg) translate(12.5em) rotate(-225deg); }
-      .circle-container > *:nth-of-type(7) {
-        transform: rotate(270deg) translate(12.5em) rotate(-270deg); }
-      .circle-container > *:nth-of-type(8) {
-        transform: rotate(315deg) translate(12.5em) rotate(-315deg); }
-    .circle-container .svg {
-      max-width: 125%;
-      max-height: 125%; }
-
-  .landing-area-container a {
-    top: 35%; } }
-@media only screen and (max-width: 610px) {
-  .circle-container {
-    position: relative;
-    width: 18em;
-    height: 18em;
-    padding: 0;
-    border-radius: 50%;
-    list-style: none;
-    margin: 5em auto 0; }
-    .circle-container > * {
-      display: block;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 6em;
-      height: 6em;
-      margin: -3em; }
-      .circle-container > *:nth-of-type(1) {
-        transform: rotate(0deg) translate(9em) rotate(0deg); }
-      .circle-container > *:nth-of-type(2) {
-        transform: rotate(45deg) translate(9em) rotate(-45deg); }
-      .circle-container > *:nth-of-type(3) {
-        transform: rotate(90deg) translate(9em) rotate(-90deg); }
-      .circle-container > *:nth-of-type(4) {
-        transform: rotate(135deg) translate(9em) rotate(-135deg); }
-      .circle-container > *:nth-of-type(5) {
-        transform: rotate(180deg) translate(9em) rotate(-180deg); }
-      .circle-container > *:nth-of-type(6) {
-        transform: rotate(225deg) translate(9em) rotate(-225deg); }
-      .circle-container > *:nth-of-type(7) {
-        transform: rotate(270deg) translate(9em) rotate(-270deg); }
-      .circle-container > *:nth-of-type(8) {
-        transform: rotate(315deg) translate(9em) rotate(-315deg); }
-    .circle-container .svg {
-      max-width: 125%;
-      max-height: 125%; } }
-@media only screen and (max-width: 450px) {
-  .circle-container {
-    position: relative;
-    width: 16em;
-    height: 16em;
-    padding: 0;
-    border-radius: 50%;
-    list-style: none;
-    margin: 5em auto 0; }
-    .circle-container > * {
-      display: block;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 6em;
-      height: 6em;
-      margin: -3em; }
-      .circle-container > *:nth-of-type(1) {
-        transform: rotate(0deg) translate(8em) rotate(0deg); }
-      .circle-container > *:nth-of-type(2) {
-        transform: rotate(45deg) translate(8em) rotate(-45deg); }
-      .circle-container > *:nth-of-type(3) {
-        transform: rotate(90deg) translate(8em) rotate(-90deg); }
-      .circle-container > *:nth-of-type(4) {
-        transform: rotate(135deg) translate(8em) rotate(-135deg); }
-      .circle-container > *:nth-of-type(5) {
-        transform: rotate(180deg) translate(8em) rotate(-180deg); }
-      .circle-container > *:nth-of-type(6) {
-        transform: rotate(225deg) translate(8em) rotate(-225deg); }
-      .circle-container > *:nth-of-type(7) {
-        transform: rotate(270deg) translate(8em) rotate(-270deg); }
-      .circle-container > *:nth-of-type(8) {
-        transform: rotate(315deg) translate(8em) rotate(-315deg); }
-    .circle-container .svg {
-      max-width: 100%;
-      max-height: 100%; } }
-@media only screen and (max-width: 370px) {
-  .circle-container {
-    position: relative;
-    width: 14em;
-    height: 14em;
-    padding: 0;
-    border-radius: 50%;
-    list-style: none;
-    margin: 5em auto 0; }
-    .circle-container > * {
-      display: block;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 4em;
-      height: 4em;
-      margin: -2em; }
-      .circle-container > *:nth-of-type(1) {
-        transform: rotate(0deg) translate(7em) rotate(0deg); }
-      .circle-container > *:nth-of-type(2) {
-        transform: rotate(45deg) translate(7em) rotate(-45deg); }
-      .circle-container > *:nth-of-type(3) {
-        transform: rotate(90deg) translate(7em) rotate(-90deg); }
-      .circle-container > *:nth-of-type(4) {
-        transform: rotate(135deg) translate(7em) rotate(-135deg); }
-      .circle-container > *:nth-of-type(5) {
-        transform: rotate(180deg) translate(7em) rotate(-180deg); }
-      .circle-container > *:nth-of-type(6) {
-        transform: rotate(225deg) translate(7em) rotate(-225deg); }
-      .circle-container > *:nth-of-type(7) {
-        transform: rotate(270deg) translate(7em) rotate(-270deg); }
-      .circle-container > *:nth-of-type(8) {
-        transform: rotate(315deg) translate(7em) rotate(-315deg); }
-    .circle-container .svg {
-      max-width: 110%;
-      max-height: 110%; } }
-@media only screen and (min-width: 800px) {
-  #about {
-    display: flex;
-    flex-direction: row; }
-    #about > div:first-child {
-      margin: 0px 10px 0px 0px;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      border-right: 2px solid #2581Dc;
-      padding: 5px 8px 5px 5px; }
-    #about h3 {
-      text-decoration: none; } }
 
 /*# sourceMappingURL=style.css.map */
