--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,6 +9,7 @@ $link-hover-color: #2581Dc;
 $page-background: #FDFDFD;
 
 $primary: #2196f3;
+$primary-dark: #0D47A1;
 
 $gradient-1: #16222A;
 $gradient-2: #3A6073;
@@ -235,30 +236,100 @@ h1, h3 {
 }
 
 .landing-area-container {
-    position: relative;
     width: 100%;
     height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-image: radial-gradient(circle, $gradient-1, $gradient-2);
+    background-image: radial-gradient(circle, $page-background 60%, $primary);
 
-    a {
-        position: absolute;
-        top: 50%;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
+    .row1 {
         text-align: center;
-        z-index: 1;
-        cursor: pointer;
-        text-decoration: none;
-        color: inherit;
+        div {
+            height: 200px;
+            width: 24%;
+            display: inline-block;
+            margin-top: 80px;
 
-        h1 {
-            color: $page-background;
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                border-radius: 50%;
+            }
         }
     }
+
+    .row2 {
+        text-align: center;
+        div {
+            height: 200px;
+            width: 32%;
+            display: inline-block;
+            vertical-align: top;
+            .heading-container {
+                display: flex;
+                align-items:center;
+                justify-content: center;
+                width: 100%;
+            }
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                border-radius: 50%;
+            }
+            a {
+                text-decoration: none;
+            }
+            h1 {
+                cursor: pointer;
+                color: $primary-dark;
+            }
+        }
+    }
+
+    .row3 {
+        text-align:center;
+        div {
+            height: 200px;
+            width: 24%;
+            display: inline-block;
+            vertical-align: top;
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                border-radius: 50%;
+            }
+        }
+    }
+
+    .row4 {
+        text-align: center;
+        div {
+            height: 200px;
+            width: 32%;
+            display: inline-block;
+            vertical-align: top;
+            img {
+                max-width: 100%;
+                max-height: 100%;
+                border-radius: 50%;
+            }
+        }
+    }
+
+    // a {
+    //     position: absolute;
+    //     top: 50%;
+    //     left: 0;
+    //     right: 0;
+    //     margin: 0 auto;
+    //     text-align: center;
+    //     z-index: 1;
+    //     cursor: pointer;
+    //     text-decoration: none;
+    //     color: inherit;
+
+    //     h1 {
+    //         color: $primary-dark;
+    //     }
+    // }
 }
 
 #arrow {
@@ -269,7 +340,7 @@ h1, h3 {
 }
 
 .arrow-hover {
-    color: #2581Dc;
+    color: green;
 }
 
 .learn-more-btn {
@@ -327,36 +398,33 @@ h1, h3 {
     }
 }
 
-.circle-container {
-    @include on-circle($item-count: 5, $circle-size: 40em, $item-size: 12em);
+// .circle-container {
+//     @include on-circle($item-count: 5, $circle-size: 40em, $item-size: 12em);
 
-    // max-width: 50%;
-    margin: 5em auto 0;
+//     // max-width: 50%;
+//     margin: 5em auto 0;
 
-    // border: solid 5px tomato;
+//     // border: solid 5px tomato;
 
-    .svg {
-        display: block;
-        width: 125%;
-        height: 125%;
+//     .svg {
+//         display: block;
+//         width: 125%;
+//         height: 125%;
 
-        // background-color: #ff5722;
-        // border-radius: 50%;
-        // filter: grayscale(100%);
-        // border: solid 5px tomato;
-        // transition: .15s;
+//         // background-color: #ff5722;
+//         // border-radius: 50%;
+//         // filter: grayscale(100%);
+//         // border: solid 5px tomato;
+//         // transition: .15s;
 
-        &:hover,
-        &:active {
-            // filter: grayscale(0);
+//         &:hover,
+//         &:active {
+//             // filter: grayscale(0);
        
-        }
-    }
-}
+//         }
+//     }
+// }
 
-.svg path {
-    fill: $page-background;
-}
 
 @media only screen and (max-width: $breakpoint) {
     .nav-mobile {
@@ -416,85 +484,3 @@ h1, h3 {
     }
 }
 
-//resize circle images
-@media only screen and (max-width: 950px) {
-    .circle-container {
-        @include on-circle($item-count: 8, $circle-size: 25em, $item-size: 8em);
-
-        // max-width: 50%;
-        margin: 5em auto 0;
-
-        .svg {
-            max-width: 125%;
-            max-height: 125%;
-        }
-    }
-
-    .landing-area-container {
-        a {
-            top: 35%;
-        }
-    }
-}
-
-@media only screen and (max-width: 610px) {
-    .circle-container {
-        @include on-circle($item-count: 8, $circle-size: 18em, $item-size: 6em);
-
-        // max-width: 50%;
-        margin: 5em auto 0;
-
-        .svg {
-            max-width: 125%;
-            max-height: 125%;
-        }
-    }
-}
-
-@media only screen and (max-width: 450px) {
-    .circle-container {
-        @include on-circle($item-count: 8, $circle-size: 16em, $item-size: 6em);
-
-        // max-width: 50%;
-        margin: 5em auto 0;
-
-        .svg {
-            max-width: 100%;
-            max-height: 100%;
-        }
-    }
-}
-
-@media only screen and (max-width: 370px) {
-    .circle-container {
-        @include on-circle($item-count: 8, $circle-size: 14em, $item-size: 4em);
-
-        // max-width: 50%;
-        margin: 5em auto 0;
-
-        .svg {
-            max-width: 110%;
-            max-height: 110%;
-        }
-    }
-}
-
-@media only screen and (min-width: $breakpoint) {
-    #about {
-        display: flex;
-        flex-direction: row;
-
-        > div:first-child {
-            margin: 0px 10px 0px 0px;
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            border-right: 2px solid $link-hover-color;
-            padding: 5px 8px 5px 5px;
-        }
-
-        h3 {
-            text-decoration: none;
-        }
-    }
-}
