--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,60 +165,37 @@ h1, h3 {
   width: 100%;
   height: 100vh;
   background-image: radial-gradient(circle, #FDFDFD 60%, #2196f3); }
-  .landing-area-container .row1 {
-    text-align: center; }
-    .landing-area-container .row1 div {
-      height: 200px;
-      width: 24%;
-      display: inline-block;
-      margin-top: 80px; }
-      .landing-area-container .row1 div img {
-        max-width: 100%;
-        max-height: 100%;
-        border-radius: 50%; }
-  .landing-area-container .row2 {
-    text-align: center; }
-    .landing-area-container .row2 div {
-      height: 200px;
-      width: 32%;
-      display: inline-block;
-      vertical-align: top; }
-      .landing-area-container .row2 div .heading-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%; }
-      .landing-area-container .row2 div img {
-        max-width: 100%;
-        max-height: 100%;
-        border-radius: 50%; }
-      .landing-area-container .row2 div a {
-        text-decoration: none; }
-      .landing-area-container .row2 div h1 {
-        cursor: pointer;
-        color: #0D47A1; }
-  .landing-area-container .row3 {
-    text-align: center; }
-    .landing-area-container .row3 div {
-      height: 200px;
-      width: 24%;
-      display: inline-block;
-      vertical-align: top; }
-      .landing-area-container .row3 div img {
-        max-width: 100%;
-        max-height: 100%;
-        border-radius: 50%; }
-  .landing-area-container .row4 {
-    text-align: center; }
-    .landing-area-container .row4 div {
-      height: 200px;
-      width: 32%;
-      display: inline-block;
-      vertical-align: top; }
-      .landing-area-container .row4 div img {
-        max-width: 100%;
-        max-height: 100%;
-        border-radius: 50%; }
+
+.wrap {
+  margin-top: 70px;
+  max-width: 100%;
+  width: 100%;
+  max-height: 100%;
+  height: 100%;
+  overflow: hidden; }
+
+.row {
+  max-height: 23vh;
+  height: 23vh; }
+  .row div {
+    height: 100%;
+    width: 100%; }
+    .row div img {
+      max-height: 100%;
+      max-width: 100%;
+      border-radius: 50%; }
+
+.landing-area-brand {
+  text-decoration: none;
+  color: #0D47A1; }
+
+.text-center {
+  text-align: center; }
+
+.v-center {
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 #arrow {
   -moz-transition: all .2s ease-in;
