--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -240,79 +240,81 @@ h1, h3 {
     height: 100vh;
     background-image: radial-gradient(circle, $page-background 60%, $primary);
 
-    .row1 {
-        text-align: center;
-        div {
-            height: 200px;
-            width: 24%;
-            display: inline-block;
-            margin-top: 80px;
+    
 
-            img {
-                max-width: 100%;
-                max-height: 100%;
-                border-radius: 50%;
-            }
-        }
-    }
+    // .row1 {
+    //     text-align: center;
+    //     div {
+    //         height: 200px;
+    //         width: 24%;
+    //         display: inline-block;
+    //         margin-top: 80px;
 
-    .row2 {
-        text-align: center;
-        div {
-            height: 200px;
-            width: 32%;
-            display: inline-block;
-            vertical-align: top;
-            .heading-container {
-                display: flex;
-                align-items:center;
-                justify-content: center;
-                width: 100%;
-            }
-            img {
-                max-width: 100%;
-                max-height: 100%;
-                border-radius: 50%;
-            }
-            a {
-                text-decoration: none;
-            }
-            h1 {
-                cursor: pointer;
-                color: $primary-dark;
-            }
-        }
-    }
+    //         img {
+    //             max-width: 100%;
+    //             max-height: 100%;
+    //             border-radius: 50%;
+    //         }
+    //     }
+    // }
 
-    .row3 {
-        text-align:center;
-        div {
-            height: 200px;
-            width: 24%;
-            display: inline-block;
-            vertical-align: top;
-            img {
-                max-width: 100%;
-                max-height: 100%;
-                border-radius: 50%;
-            }
-        }
-    }
+    // .row2 {
+    //     text-align: center;
+    //     div {
+    //         height: 200px;
+    //         width: 32%;
+    //         display: inline-block;
+    //         vertical-align: top;
+    //         .heading-container {
+    //             display: flex;
+    //             align-items:center;
+    //             justify-content: center;
+    //             width: 100%;
+    //         }
+    //         img {
+    //             max-width: 100%;
+    //             max-height: 100%;
+    //             border-radius: 50%;
+    //         }
+    //         a {
+    //             text-decoration: none;
+    //         }
+    //         h1 {
+    //             cursor: pointer;
+    //             color: $primary-dark;
+    //         }
+    //     }
+    // }
 
-    .row4 {
-        text-align: center;
-        div {
-            height: 200px;
-            width: 32%;
-            display: inline-block;
-            vertical-align: top;
-            img {
-                max-width: 100%;
-                max-height: 100%;
-                border-radius: 50%;
-            }
-        }
-    }
+    // .row3 {
+    //     text-align:center;
+    //     div {
+    //         height: 200px;
+    //         width: 24%;
+    //         display: inline-block;
+    //         vertical-align: top;
+    //         img {
+    //             max-width: 100%;
+    //             max-height: 100%;
+    //             border-radius: 50%;
+    //         }
+    //     }
+    // }
+
+    // .row4 {
+    //     text-align: center;
+    //     div {
+    //         height: 200px;
+    //         width: 32%;
+    //         display: inline-block;
+    //         vertical-align: top;
+    //         img {
+    //             max-width: 100%;
+    //             max-height: 100%;
+    //             border-radius: 50%;
+    //         }
+    //     }
+    // }
 
     // a {
     //     position: absolute;
@@ -330,6 +332,45 @@ h1, h3 {
     //         color: $primary-dark;
     //     }
     // }
+}
+
+.wrap {
+    margin-top: 70px;
+    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.row {
+    max-height: 23vh;
+    height: 23vh;
+    div {
+        height: 100%;
+        width: 100%;
+
+        img {
+            max-height: 100%;
+            max-width: 100%;
+            border-radius: 50%;
+        }
+    }
+}
+
+.landing-area-brand {
+    text-decoration: none;
+    color: $primary-dark;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.v-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #arrow {
