--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,11 +179,32 @@ h1, h3 {
   height: 23vh; }
   .row div {
     height: 100%;
-    width: 100%; }
+    width: 100%;
+    position: relative; }
     .row div img {
       max-height: 100%;
       max-width: 100%;
       border-radius: 50%; }
+
+.x-across:before,
+.x-across:after {
+  position: absolute;
+  content: '';
+  background: red;
+  display: block;
+  width: 60%;
+  height: 10px;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto; }
+
+.x-across:after {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg); }
 
 .landing-area-brand {
   text-decoration: none;
