--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -239,99 +239,6 @@ h1, h3 {
     width: 100%;
     height: 100vh;
     background-image: radial-gradient(circle, $page-background 60%, $primary);
-
-    
-
-    // .row1 {
-    //     text-align: center;
-    //     div {
-    //         height: 200px;
-    //         width: 24%;
-    //         display: inline-block;
-    //         margin-top: 80px;
-
-    //         img {
-    //             max-width: 100%;
-    //             max-height: 100%;
-    //             border-radius: 50%;
-    //         }
-    //     }
-    // }
-
-    // .row2 {
-    //     text-align: center;
-    //     div {
-    //         height: 200px;
-    //         width: 32%;
-    //         display: inline-block;
-    //         vertical-align: top;
-    //         .heading-container {
-    //             display: flex;
-    //             align-items:center;
-    //             justify-content: center;
-    //             width: 100%;
-    //         }
-    //         img {
-    //             max-width: 100%;
-    //             max-height: 100%;
-    //             border-radius: 50%;
-    //         }
-    //         a {
-    //             text-decoration: none;
-    //         }
-    //         h1 {
-    //             cursor: pointer;
-    //             color: $primary-dark;
-    //         }
-    //     }
-    // }
-
-    // .row3 {
-    //     text-align:center;
-    //     div {
-    //         height: 200px;
-    //         width: 24%;
-    //         display: inline-block;
-    //         vertical-align: top;
-    //         img {
-    //             max-width: 100%;
-    //             max-height: 100%;
-    //             border-radius: 50%;
-    //         }
-    //     }
-    // }
-
-    // .row4 {
-    //     text-align: center;
-    //     div {
-    //         height: 200px;
-    //         width: 32%;
-    //         display: inline-block;
-    //         vertical-align: top;
-    //         img {
-    //             max-width: 100%;
-    //             max-height: 100%;
-    //             border-radius: 50%;
-    //         }
-    //     }
-    // }
-
-    // a {
-    //     position: absolute;
-    //     top: 50%;
-    //     left: 0;
-    //     right: 0;
-    //     margin: 0 auto;
-    //     text-align: center;
-    //     z-index: 1;
-    //     cursor: pointer;
-    //     text-decoration: none;
-    //     color: inherit;
-
-    //     h1 {
-    //         color: $primary-dark;
-    //     }
-    // }
 }
 
 .wrap {
@@ -341,22 +248,23 @@ h1, h3 {
     max-height: 100%;
     height: 100%;
     overflow: hidden;
-}
 
-.row {
-    max-height: 23vh;
-    height: 23vh;
-    div {
-        height: 100%;
-        width: 100%;
-        position: relative;
-        img {
-            max-height: 100%;
-            max-width: 100%;
-            border-radius: 50%;
+    .row {
+        max-height: 23vh;
+        height: 23vh;
+        div {
+            height: 100%;
+            width: 100%;
+            position: relative;
+            img {
+                max-height: 100%;
+                max-width: 100%;
+                border-radius: 50%;
+            }
         }
     }
 }
+
 
 .x-across:before,
 .x-across:after {
@@ -378,6 +286,10 @@ h1, h3 {
 .x-across:after {
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+
+.x-across {
+    overflow: hidden;
 }
 
 .landing-area-brand {
@@ -425,69 +337,29 @@ h1, h3 {
         transform: translateY(3px);
     }
 }
-/// Mixin to place items on a circle
-/// @author Hugo Giraudel
-/// @author Ana Tudor
-/// @param {Integer} $item-count - Number of items on the circle
-/// @param {Length} $circle-size - Large circle size
-/// @param {Length} $item-size - Single item size
-@mixin on-circle($item-count, $circle-size, $item-size) {
-    position: relative;
-    width: $circle-size;
-    height: $circle-size;
-    padding: 0;
-    border-radius: 50%;
-    list-style: none;
 
-    > * {
-        display: block;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: $item-size;
-        height: $item-size;
-        margin: -($item-size / 2);
-
-        $angle: 360 / $item-count;
-        $rot: 0;
-
-        @for $i from 1 through $item-count {
-            &:nth-of-type(#{$i}) {
-                transform: rotate($rot * 1deg) translate($circle-size / 2) rotate($rot * -1deg);
+.mobile-wrap {
+    display: none;
+    margin-top: 70px;
+    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
+    height: 100%;
+    overflow: hidden;
+    .row {
+        height: 30vh;
+        div {
+            height: 100%;
+            width: 100%;
+            position: relative;
+                img {
+                    max-height: 100%;
+                    max-width: 100%;
+                    border-radius: 50%;
+                }
             }
-
-            $rot: $rot + $angle;
-        }
     }
 }
-
-// .circle-container {
-//     @include on-circle($item-count: 5, $circle-size: 40em, $item-size: 12em);
-
-//     // max-width: 50%;
-//     margin: 5em auto 0;
-
-//     // border: solid 5px tomato;
-
-//     .svg {
-//         display: block;
-//         width: 125%;
-//         height: 125%;
-
-//         // background-color: #ff5722;
-//         // border-radius: 50%;
-//         // filter: grayscale(100%);
-//         // border: solid 5px tomato;
-//         // transition: .15s;
-
-//         &:hover,
-//         &:active {
-//             // filter: grayscale(0);
-       
-//         }
-//     }
-// }
-
 
 @media only screen and (max-width: $breakpoint) {
     .nav-mobile {
@@ -506,6 +378,21 @@ h1, h3 {
 
     .content {
         width: 90%;
+    }
+    
+    .wrap {
+        display: none;
+    }
+
+    .mobile-wrap {
+        display: block;
+        a {
+            width: 100%;
+        }
+    }
+
+    .landing-area-container {
+        background-image: radial-gradient(ellipse, $page-background 75%, $primary);
     }
 
     nav {
@@ -547,3 +434,15 @@ h1, h3 {
     }
 }
 
+@media only screen and (max-width: 1030px) {
+    .wrap {
+        .row {
+            max-height: 20vh;
+            height: 20vh;
+            div {
+                max-height: 80%;
+                height: 80%;
+            }
+        }
+    }
+}
