--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -468,6 +468,22 @@ h1, h3 {
     }
 }
 
+.parsley-custom-error-message {
+    display: block;
+    list-style: none;
+    width: 90%;
+    margin: 0 auto;
+    font-family: $pt-sans;
+    font-size: 20px;
+    background-color: white;
+    padding: 10px;
+    border: solid 5px #F44336;
+}
+
+.parsley-errors-list {
+    padding: 0;
+}
+
 @media only screen and (max-width: $breakpoint) {
     .nav-mobile {
         display: block;
