--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,9 +120,17 @@ nav {
   .content video {
     max-width: 100%;
     max-height: 600px; }
+  .content p {
+    padding: 0px 10px 0px 10px;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto; }
 
 .text-center {
   text-align: center; }
+
+.text-left {
+  text-align: left; }
 
 .underline {
   text-decoration: underline; }
@@ -163,7 +171,7 @@ h1, h3 {
     margin-bottom: 5px;
     max-width: 100%; }
   .product div {
-    padding: 5px 0px 5px 0px;
+    padding: 5px 10px 5px 10px;
     background-color: #FDFDFD;
     border-radius: 10px; }
 
@@ -356,7 +364,8 @@ h1, h3 {
   border-radius: 5px;
   padding: 5px;
   text-shadow: none;
-  outline: none; }
+  outline: none;
+  margin-bottom: 5px; }
   .buy-btn:hover {
     background-color: #FB8C00;
     cursor: pointer; }
@@ -394,6 +403,8 @@ h1, h3 {
 
   .content {
     width: 90%; }
+    .content p {
+      width: 90%; }
 
   .wrap {
     display: none; }
