--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Exo+2|PT+Sans');
+@import url("https://fonts.googleapis.com/css?family=Exo+2|PT+Sans");
 
 $content-width: 1000px;
 $breakpoint: 800px;
@@ -14,8 +14,8 @@ $primary-dark: #0D47A1;
 $gradient-1: #16222A;
 $gradient-2: #3A6073;
 
-$exo: 'Exo 2', sans-serif;
-$pt-sans: 'PT Sans', sans-serif;
+$exo: "Exo 2", sans-serif;
+$pt-sans: "PT Sans", sans-serif;
 
 html, body {
     margin: 0;
@@ -209,7 +209,7 @@ h1, h3 {
 }
 
 .product div {
-    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 #products {
@@ -219,6 +219,7 @@ h1, h3 {
     > div {
         display: flex;
         justify-content: center;
+
         > h2 {
             display: inline-block;
             margin-top: 15px;
@@ -240,6 +241,7 @@ h1, h3 {
 .product {
     max-width: 700px;
     margin: 0px 10px 20px 0px;
+
     img {
         display: block;
         margin-left: auto;
@@ -272,10 +274,12 @@ h1, h3 {
     .row {
         max-height: 23vh;
         height: 23vh;
+
         div {
             height: 100%;
             width: 100%;
             position: relative;
+
             img {
                 max-height: 100%;
                 max-width: 100%;
@@ -284,7 +288,6 @@ h1, h3 {
         }
     }
 }
-
 
 .x-across:before,
 .x-across:after {
@@ -371,23 +374,27 @@ h1, h3 {
     max-height: 100%;
     height: 100%;
     overflow: hidden;
+
     .row {
         height: 30vh;
+
         div {
             height: 100%;
             width: 100%;
             position: relative;
-                img {
-                    max-height: 100%;
-                    max-width: 100%;
-                    border-radius: 50%;
-                }
+
+            img {
+                max-height: 100%;
+                max-width: 100%;
+                border-radius: 50%;
             }
+        }
     }
 }
 
 #contact {
     height: 100%;
+
     .contact-container {
         height: 100%;
         display: -webkit-flex;
@@ -404,6 +411,7 @@ h1, h3 {
 
             form {
                 height: 100%;
+
                 div {
                     margin: 5px 0px 5px 0px;
                 }
@@ -435,7 +443,7 @@ h1, h3 {
 
             input:focus,
             textarea:focus {
-                outline:none;
+                outline: none;
             }
         }
     }
@@ -457,10 +465,12 @@ h1, h3 {
     margin: 0 auto !important;
     background-color: white;
     border-color: $link-hover-color;
+
     p {
         font-family: $pt-sans;
         font-size: 24px;
     }
+
     select {
         -webkit-appearance: menulist-button;
         height: 40px;
@@ -553,13 +563,14 @@ h1, h3 {
             width: 90%;
         }
     }
-    
+
     .wrap {
         display: none;
     }
 
     .mobile-wrap {
         display: block;
+
         a {
             width: 100%;
         }
@@ -574,12 +585,13 @@ h1, h3 {
         width: 90% !important;
         height: 80% !important;
         margin: 15px 0px 0px 0px;
+
         form {
             input {
                 height: 25px !important;
             }
 
-        textarea {
+            textarea {
                 height: 250px !important;
             }
         }
@@ -635,6 +647,7 @@ h1, h3 {
         .row {
             max-height: 20vh;
             height: 20vh;
+
             div {
                 max-height: 80%;
                 height: 80%;
