--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -293,13 +293,17 @@ h1, h3 {
     }
 }
 
+.img-scale {
+    transform: scale(1.4);
+}
+
 .x-across:before,
 .x-across:after {
     position: absolute;
     content: '';
     background: red;
     display: block;
-    width: 60%;
+    width: 90%;
     height: 10px;
     -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
@@ -308,15 +312,12 @@ h1, h3 {
     top: 0;
     bottom: 0;
     margin: auto;
+    z-index: 900;
 }
 
 .x-across:after {
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
-}
-
-.x-across {
-    overflow: hidden;
 }
 
 .landing-area-brand {
