New product added

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -181,7 +181,7 @@ nav {
     background-color: $off-white;
     border-radius: 10px;
 
-    video {
+    video, img {
         max-width: 100%;
         max-height: 600px;
     }
